# knights_tour

./: .github_token  .gitignore  CHANGES  LICENSE  README.md  analyze_depths.ml  benchmark.ml  counter.ml  counter.mli  dune  dune-project  estimate_classic_pento.ml  estimate_polyomino.ml  gen-docs.sh  hexo_solve.ml  index.html  kdvolder-playground.opam  knights-tour.opam  knights_tour.opam  knights_tour.opam.template  mem_654d0fc6-91ed-4b81-a905-9a88e12df25a.md  on_boot.sh  pento_solve.ml  play.ml  playground.ml  polymino-puzzle.txt  random_hexo_puzzle.ml  release.sh  release_pr_log.md  solve.ml  solve_file.ml  solve_horsejump.ml  test_convergence.ml
collections/: clist.ml  clist.mli  dlist.ml  dlist.mli  dlist_itf.ml  dune  persist.ml  persist.mli  treequence.ml  treequence.mli  util.ml
doc/_html/: index.html
docs/: index.html
docs/knights-tour/: index.html
docs/knights_tour/: index.html
knights_tour/: Fun.ml  Lines.ml  Lines.mli  cache.ml  dune  game.ml  game.mli  index.html  lines.mli  point.ml  pointMap.ml  pointMap.mli  searchspace.ml  searchspace.mli  treequence.mli
knights_tour/Collections/: index.html
knights_tour/Knights_tour/: index.html
knights_tour/Pentominos/: index.html
knights_tour/Searchspace/: index.html
knights_tour/Stochastic_estimator/: index.html
lib/: dune  horsejump.ml  searchspace.ml  searchspace.mli
pentominos/: board.ml  board.mli  dune  pointMap.ml  pointMap.mli  pointSet.ml  pointSet.mli  polyomino.ml  polyomino.mli  puzzle.ml  puzzle.mli  randomize.ml  randomize.mli  treequence.ml
run_logs/: hexo_solve.txt  hexo_solve_donut.txt  hexo_solve_donut_b2.txt  hexo_solve_donut_b3.txt  hexo_solve_donut_b4.txt  hexo_solve_donut_breadth_search.txt
saves/hexo_assymetric_donut/: log.txt  polymino-puzzle.txt
saves/hexo_assymetric_donut_2/: polymino-puzzle.txt
saves/pinned/: polymino-puzzle.txt
searchspace/: clist.mli  dlist.ml  dlist.mli  dlist_itf.ml  dune  memfree.ml  searchspace.ml  searchspace.mli  stochastic_estimator.ml  stochastic_estimator.mli  treequence.ml  treequence.mli  util.ml
solve_file_ui/: README.md  deploy.sh  package-lock.json  package.json  start.sh
(+101 files in other folders)
